Remove usages of Unsafe.defineAnonymousClass()
In shiny new java 17 world we have Lookup.defineHiddenClass() as a supported public API.